# ImageRetrievalServer

./: .gitignore  README.md  init_database.sh  manage.py  pip_requirements.txt
configurations/: settings.py  settings_local.py  settings_local_example.py  urls.py  wsgi.py
core/: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compute_ap.sh  compute_map  compute_map.cpp  configurations.h  initialize.h  local_configurations.h  local_configurations_example.h  main.cpp  runserver.h  test.h
core/app/: appdata.h
core/extract/: extract.h
core/modules/: FindPQXX.cmake
core/quantize/: quantize.h
core/query/: query.h
core/utils/: geometric_verification.h  invertedindex.h  utils.h
core/utils/compute_ap/: compute_ap.cpp
core/utils/hesaff/: helpers.cpp  hesaff  hesaff.cpp
iradapter/: admin.py  models.py  serializers.py  urls.py  views.py
iradapter/migrations/: 0001_initial.py
landscapes/: admin.py  models.py  serializers.py  urls.py  views.py
landscapes/migrations/: 0001_initial.py  0002_landscape_rating.py
